cli/tests/lit/parse-error.lit
# SPDX-FileCopyrightText: © 2021 ChiselStrike <info@chiselstrike.com>

# RUN: sh -e @file

cat << EOF > "$TEMPDIR/endpoints/error.ts"
export default async function chisel(req) {
    return new Response("foo" "bar");
}
EOF

cd "$TEMPDIR"

set +e
$CHISEL apply 2>&1
set -e
# CHECK: Error: parsing endpoint error:
# CHECK: TypeError: Parse failed: error: Expected ',', got 'string literal (bar)'
# CHECK: 2 |     return new Response("foo" "bar");

